Replace Java11 collection factories